--- a/pom.xml
+++ b/pom.xml
@@ -26,16 +26,20 @@
             <artifactId>hystrix-core</artifactId>
             <version>1.5.13</version>
         </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>RELEASE</version>
+            <version>4.12</version>
+            <scope>test</scope>
         </dependency>
+
         <dependency>
-             <groupId>org.slf4j</groupId>
-             <artifactId>slf4j-nop</artifactId>
-             <version>1.7.2</version>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-nop</artifactId>
+            <version>1.7.13</version>
         </dependency>
+
     </dependencies>
 
 
